--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -41,6 +41,7 @@
           font-size: inherit;
           color: currentColor;
           z-index: 20;
+          position: relative;
         }
         &--item::before {
           content: "";
@@ -49,7 +50,8 @@
           background-color: var(--Primary);
           width: 0.5rem;
           transform: scaleY(0);
-          transition: transform 0.3s, width 0.4s 0.3s;
+          transition: transform 0.3s,
+            width 0.4s cubic-bezier(0.3, 1.23, 1, -0.55) 0.3s;
           z-index: 10;
         }
         &--item:hover::before {
@@ -66,17 +68,14 @@
       }
     }
     &--body {
-      // background-color: red;
-
       flex: 0 0 80%;
-      .gallary{
+      .gallary {
         display: flex;
-        &-photo{
-          width: 33.3%;
+        &-photo {
+          width: 33.33%;
+          height: 100%;
         }
       }
-   
-
     }
   }
 }
